feat: refactor logging
